test/scopes/reject/fail3.rift
let
  fn id(x: i64): i64 = y
in
end
